# Jozvesaz

./: .env.example  README.md
backend/: .env  alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 20240302_0001_create_users_and_tasks.py  20240509_0002_add_task_result_fields.py
backend/app/: __init__.py  celery_app.py  db.py
backend/app/auth/: __init__.py  dependencies.py  jwt.py  passwords.py  router.py
backend/app/models/: __init__.py
backend/app/routers/: __init__.py  tasks.py
backend/tests/: test_auth.py  test_tasks.py
frontend/: .env.example  .env.local  .gitignore  README.md  middleware.ts  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  icon.tsx  layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(marketing)/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx  task-list.tsx
frontend/hooks/: use-current-user.ts
frontend/lib/: constants.ts  http.ts  proxy.ts
frontend/scripts/: download-fonts.mjs
frontend/tests/: api-proxy.test.ts
frontend/types/: auth.ts
infrastructure/: .gitkeep  docker-compose.yml  install_secure_redis.sh  mount_storage_volume.sh  setup_postgresql_ssd.sh
infrastructure/loki/: loki-config.yml  promtail-config.yml
infrastructure/nginx/: README.md  deploy.sh  site.conf
infrastructure/postgres/: .env
infrastructure/prometheus/: alert.rules.yml  prometheus.yml
infrastructure/redis/: .env
worker/: .env  README.md  entrypoint.sh  pyproject.toml
worker/app/: __init__.py  monitoring.py  tasks.py  transcription.py
worker/tests/: test_tasks.py
(+24 files in other folders)
