[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jozvesaz-worker"
version = "0.1.0"
description = "Celery worker service for the Jozvesaz platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.3,<6.0",
    "pydantic>=1.10",
    "sqlalchemy>=2.0",
    "sqlmodel>=0.0.14",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["worker", "worker.*"]
